--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: A-Tale-of-Two-Cities_98
-_version: 0.2.1
+_version: 0.2.2
 covers:
 - attribution: Alexis Lampley, 2015
   cover_type: original
@@ -15,6 +15,8 @@ creator:
     gutenberg_agent_id: '37'
     url: http://www.gutenberg.org/2009/agents/37
     wikipedia: http://en.wikipedia.org/wiki/Charles_Dickens
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/98#A-Tale-of-Two-Cities
 gutenberg_bookshelf: Historical Fiction
 gutenberg_issued: '1994-01-01'
 gutenberg_type: Text
